feat: add carousel to Home component
Add an image carousel to the Home component to display featured content dynamically.

--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -9,6 +9,7 @@
 
 /*  ******* UI Components ******* */
 @use '../../components/InputField/inpurtField';
+@use '../../pages/Home/components/Carousel/carousel';
 
 /*  ******* layout Components ******* */
 @use '../../components/layouts/Navbar/components/Search/style/search';
