style: update CSS styles
Modify the CSS style files to improve the look and feel of the application.

--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -5,6 +5,12 @@ body {
 	overflow-x: hidden;
 }
 
+#root {
+	display: grid;
+	grid-template-rows: auto 1fr auto;
+	min-height: 100vh;
+}
+
 .main-section {
 	max-width: var(--max-width);
 	margin: 0 auto;
