style: modify styles in navigation and user components Modify navigation styles and user components to improve their appearance and readability.

--- a/src/components/layouts/Navbar/components/UserActions/_userActions.scss
+++ b/src/components/layouts/Navbar/components/UserActions/_userActions.scss
@@ -11,12 +11,13 @@
 	visibility: hidden;
 	opacity: 0;
 	z-index: 9998;
-	transition: all 0.3s ease-out;
+	transition: all 0.3s ease;
+	pointer-events: none;
 
 	&::before {
 		content: '';
 		position: absolute;
-		right: 68px;
+		right: 74px;
 		top: -10px;
 		width: 0;
 		height: 0;
