--- a/src/pages/Detail/components/_imageGallery.scss
+++ b/src/pages/Detail/components/_imageGallery.scss
@@ -16,6 +16,8 @@
 			width: 100%;
 			height: 100%;
 			border-radius: 8px;
+			object-fit: contain;
+			max-height: inherit;
 		}
 	}
 
@@ -27,6 +29,7 @@
 
 	&__thumbnail {
 		width: 70px;
+		height: 70px;
 		border-radius: 6px;
 		border: 2px solid #e9e9e9;
 
@@ -34,6 +37,7 @@
 			width: 100%;
 			height: 100%;
 			border-radius: 4px;
+			object-fit: contain;
 		}
 
 		&:hover,
