feat: add Category section with styles, API call and search filters
Integrate 'Category' section with styles, enable API data, and add filters.

--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -19,7 +19,9 @@
 @use '../../components/layouts/Navbar/styles/navbar';
 @use '../../components/layouts/Footer/footer';
 @use '../../components/ProductCard/productCard';
+@use '../../pages/Category/components/AsideFilter/asideFilter';
 
 /*  *******  Page  *******  */
 @use '../../pages/Home/homePage';
 @use '../../pages/Detail/detail';
+@use '../../pages/Category/category';
