feat: add reusable input field component with styles

--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -11,6 +11,7 @@
 @use '../../pages/Home/components/Carousel/carousel';
 @use '../../pages/Detail/components/imageGallery';
 @use '../../components/Counter/counter';
+@use '../../components/InputField/inpurtField';
 
 /*  ******* layout Components ******* */
 @use '../../components/layouts/Navbar/components/Search/style/search';
