feat: add SignUp section with styles, form validation, and registration endpoint integration

--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -28,3 +28,4 @@
 @use '../../pages/Detail/detail';
 @use '../../pages/Category/category';
 @use '../../pages/ShoppingCart/shoppingCart';
+@use '../../pages/Auth/SignUp/signUp';
