feat: protect routes in Navbar and add logout button

--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -29,3 +29,4 @@
 @use '../../pages/Category/category';
 @use '../../pages/ShoppingCart/shoppingCart';
 @use '../../pages/Auth/SignUp/signUp';
+@use '../../pages/Auth/SignIn/signIn';
