--- a/src/components/layouts/Navbar/components/UserActions/_userActions.scss
+++ b/src/components/layouts/Navbar/components/UserActions/_userActions.scss
@@ -41,24 +41,27 @@
 				}
 				border-radius: 2px;
 			}
-
-			&--logout-btn {
-				width: 100%;
-				@include mixins.flex(row, center, flex-start);
-				background-color: transparent;
-				font: var(--font-roboto-normal-300);
-				color: var(--dark-color);
-				transition: all 0.3s ease-out;
-				border-radius: 2px;
-
-				& svg {
-					margin-right: 5px;
-				}
-				&:hover {
-					background-color: var(--secondary-color-faded);
-					color: var(--light-color);
-				}
-			}
 		}
+	}
+}
+
+.logout-btn {
+	@include mixins.flex(row, center, flex-start);
+	width: 100%;
+	padding: 6px 0;
+	column-gap: 15px;
+	color: var(--dark-color);
+	font-size: 16px;
+	cursor: pointer;
+	transition: all 0.4s;
+	font: var(--font-roboto-normal-300);
+
+	& svg {
+		width: 25px;
+		height: 25px;
+	}
+
+	&:hover {
+		opacity: 0.8;
 	}
 }
