feat: add Dashboard component and role based route protection
created the Dashboard component for application management and routing protection

--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -30,3 +30,4 @@
 @use '../../pages/ShoppingCart/shoppingCart';
 @use '../../pages/Auth/SignUp/signUp';
 @use '../../pages/Auth/SignIn/signIn';
+@use '../../pages/Dashboard/dashboard';
